--- a/ghi/src/components/Cards/wishlistCard.css
+++ b/ghi/src/components/Cards/wishlistCard.css
@@ -37,13 +37,13 @@
 }
 
 .wishlistcard {
-  background-color: rgb(123, 123, 123);
+  background-color: rgb(45, 45, 45);
   width: 800px;
   height: 145px;
   border: 1px solid black;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px rgb(255, 255, 255);
   margin-top: 50px;
   margin-left: 10px;
 }
@@ -62,8 +62,8 @@
   height: 125px;
   border-radius: 25px;
   margin: 0px;
-  margin-top: -40px;
-  box-shadow: 0px 0px 10.6px 10px rgba(255, 255, 255, 0.25);
+  margin-top: -46.5px;
+  box-shadow: 0px 0px 10px 2px rgba(105, 105, 105, 0.394);
 }
 
 .wcard-details {
@@ -99,4 +99,6 @@ hr.solid {
 .gamename {
   text-align: right;
   flex: 2;
+  font-size: 20px;
+  position: relative;
 }
