--- a/ghi/src/components/Home/Landing.css
+++ b/ghi/src/components/Home/Landing.css
@@ -9,7 +9,6 @@
 }
 .hero-carousel-container {
   background-color: #1a1a1a;
-  /* overflow: hidden; */
   position: relative;
   margin: 0px auto;
   margin-top: 10px;
@@ -21,41 +20,28 @@
   z-index: 0;
   box-shadow:
     0px 30px 150px 30px rgb(255, 255, 255),
-    /* 0px 30px 50px 30px rgba(147, 2, 184, 0.371); */
 }
 .carousel-inner {
   display: flex;
   transition: transform 450ms ease-in-out;
-  /* border-radius: 20px; */
-  /* overflow: hidden; */
-
 }
-
-
 .carousel-slide {
-
   transition: transform 450ms ease-in-out;
-  /* border-radius: 20px; */
-  /* overflow: hidden; */
-
 }
-
 .carousel-item {
-  min-width: 80%; /* Ensure each item takes the full width */
+  min-width: 80%;
   border-radius: 20px;
 }
 .carousel-item img {
   width: 100%;
   height: auto;
-  /* padding-top: 19.8px; */
   margin-left: auto;
-  margin-right: auto; /* Center the image horizontally */
+  margin-right: auto;
   border-radius: 20px;
 }
 .carousel-control-prev,
 .carousel-control-next {
-  width: 5%; /* Adjust the width of the controls as needed */
-  border-radius: 20px;
+  width: 5%;
 }
 header {
   background-color: #000000;
@@ -69,13 +55,17 @@ header {
     box-shadow: 0px 2px 40px rgba(119, 0, 255, 0.1);
 }
 
-.carousel-caption {
-  position: absolute;
-  bottom: 10px; /* Adjust the bottom value as needed */
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-  width: 100%;
-  color: rgb(255, 0, 234);
-  z-index: 3;
+.caption-container {
+  position: relative;
+  bottom: 0;
+  text-align: right;
+  margin-right: 150px;
+  margin-top: 10px;
+  z-index: 2;
+
+}
+
+.caption {
+  color: rgb(255, 255, 255);
+  font-family: K2D;
 }
