All games page and wishlist cards

--- a/ghi/src/components/Cards/homeGameCard.css
+++ b/ghi/src/components/Cards/homeGameCard.css
@@ -124,9 +124,9 @@
             transition: 0.5s;
         }
 
-        :root[nighteye="active"] * {
+        /* :root[nighteye="active"] * {
         mix-blend-mode: unset;
-}
+} */
 
 
         .menu-wrapper {
