--- a/ghi/src/Nav.css
+++ b/ghi/src/Nav.css
@@ -89,9 +89,9 @@ input[type=text] {
 .nav__dropdown {
   position: absolute;
   top: calc(100% - 0px);
-  right: 20px; /* Adjust this value as needed */
+  right: -5px; /* Adjust this value as needed */
   background-color: rgb(0, 0, 0);
-  border: 3px solid #ffffff;
+  border: 3px solid #3e3e3e;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
   z-index: 2;
