--- a/ghi/src/components/Cards/wishlistCard.css
+++ b/ghi/src/components/Cards/wishlistCard.css
@@ -1,18 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
 .wcontent-capsules {
-  margin-bottom: 5px;
-  z-index: 1;
+  margin-bottom: -121px;
+  /* z-index: 1; */
   position: relative;
-  right: 450px;
-  top: 15px;
-  margin-right: 0px;
+  right: -215px;
+  /* top: 15px; */
+  margin-right: 10px;
+  gap: 1px;
 }
 
-.wcontent-capsules {
-  margin-top: 0px;
+.wcontent-capsules img {
+  margin-top: 5px;
   display: flex;
-  gap: 5px;
+  gap: 10px;
 }
 
 .gcontent-capsules img {
