--- a/ghi/src/components/Games/Listgames.css
+++ b/ghi/src/components/Games/Listgames.css
@@ -2,23 +2,23 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
 
-/* .lgamesbody {
+.lgamesbody {
     background-color: rgb(0, 0, 0);
     font-family: "K2D";
     margin-top: 0;
-} */
+}
 
 .allgamesbody {
     margin-left: 225px;
     margin-top: 150px;
     display: flex;
     flex-wrap: wrap;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     /* gap: 25px;  */
 }
 
 .allgamesbody > * {
-    flex: 1 1 calc(20% - 25px); /* 20% width for each card, considering the gap */
+    flex: 1 1 calc(20% - 25px);
 }
 
 
@@ -85,4 +85,10 @@
   gap: 50px;
   margin-top: 1dvi;
 
+}
+
+html {
+    /* color: #bfbfbf !important; */
+    background-image: none !important;
+    background: #000000 !important;
 }
