--- a/ghi/src/components/SearchResults/SearchResults.css
+++ b/ghi/src/components/SearchResults/SearchResults.css
@@ -95,6 +95,20 @@
             padding: 2px;
         }
 
+        .shghead {
+            margin: 20px 0px;
+            margin-bottom: 40px;
+            font-size: 45px;
+            font-family: 'K2D';
+            color: rgb(255, 255, 255);
+            top: 0px;
+            left: 12px;
+            position: relative;
+            background-color: rgba(0, 0, 0, 0.566);
+            border-radius: 10px;
+            padding: 2px;
+        }
+
         .shgcontent-body p {
 
             font-family: sans-serif;
@@ -135,6 +149,7 @@
             background-color: black;
             /* margin-left: -50%; */
             margin-top: 10%;
+            margin-left: 200px;
             display: flex;
             flex-wrap: wrap;
 
