--- a/ghi/src/components/SearchResults/SearchResults.css
+++ b/ghi/src/components/SearchResults/SearchResults.css
@@ -8,7 +8,7 @@
         }
 
 
-        .hgcard-container {
+        .shgcard-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: flex-start;
@@ -102,7 +102,7 @@
             font-family: 'K2D';
             color: rgb(255, 255, 255);
             top: 0px;
-            left: 12px;
+            /* left: 12px; */
             position: relative;
             background-color: rgba(0, 0, 0, 0.566);
             border-radius: 10px;
@@ -149,7 +149,7 @@
             background-color: black;
             /* margin-left: -50%; */
             margin-top: 10%;
-            margin-left: 200px;
+            /* margin-left: 200px; */
             display: flex;
             flex-wrap: wrap;
 
