--- a/ghi/src/components/Cards/wishlistCard.css
+++ b/ghi/src/components/Cards/wishlistCard.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
 .wcontent-capsules {
-  margin-bottom: -121px;
-  /* z-index: 1; */
+  margin-bottom: -30px;
+  z-index: 1;
   position: relative;
   right: -215px;
   /* top: 15px; */
@@ -12,8 +12,8 @@
 
 .wcontent-capsules img {
   margin-top: 5px;
-  display: flex;
   gap: 10px;
+  margin-bottom: -80px;
 }
 
 .gcontent-capsules img {
@@ -51,6 +51,7 @@
 
 .wcard-content {
   display: flex;
+  align-items: center; /* Align items vertically in the center */
 }
 
 /* .wcard-photo {
@@ -63,7 +64,7 @@
   height: 125px;
   border-radius: 25px;
   margin: 0px;
-  margin-top: -46.5px;
+  margin-top: -40px;
   box-shadow: 0px 0px 10px 2px rgba(105, 105, 105, 0.394);
 }
 
