--- a/ghi/src/Settings.css
+++ b/ghi/src/Settings.css
@@ -1,6 +1,6 @@
 .settingscard {
     width: 600px;
-    color: red;
+    color: rgb(192, 166, 238);
 }
 
 .rowoffive {
@@ -8,4 +8,8 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+.card-header {
+  text-decoration: underline;
 }
