--- a/ghi/src/components/Cards/largeUserReviewCard.css
+++ b/ghi/src/components/Cards/largeUserReviewCard.css
@@ -36,6 +36,13 @@
 
 }
 
+.fixed-element {
+    position: fixed;
+    top: 50px; /* Adjust the top position as needed */
+    left: 20px; /* Adjust the left position as needed */
+    /* Additional styling if necessary */
+}
+
 .lurcard-details {
     flex: 2;
     padding: 0px;
@@ -44,8 +51,8 @@
     font-size: 12px;
     text-align: center;
     margin-top: 30px;
-    margin-left: 150px;
-    margin-right: 40px;
+    /* margin-left: 150px; */
+    /* margin-right: 40px; */
     position: relative;
 
 
@@ -56,8 +63,10 @@
     margin: 0;
     color: black;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 50px;
+    /* margin-bottom: -30px; */
     font-family: 'K2D';
+
 }
 
 .lurcard-date {
