--- a/ghi/src/components/SearchResults/SearchResults.css
+++ b/ghi/src/components/SearchResults/SearchResults.css
@@ -1,36 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
-
-        .searchbody {
-            margin-left: 200px;
+        .allgamesbody {
+            margin-left: 225px;
             margin-top: 150px;
-            color: black;
-        }
-
-
-        .shgcard-container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: flex-start;
-            gap: 15px;
 
+            gap: 25px;
+        }
 
-            }
+        .allgamesbody > * {
+            flex: 1 1 calc(20% - 25px);
+        }
+
 
         .shgcard {
             background-color: #353536;
-            margin: 0px auto;
+            margin: 10px;
             padding: 15px;
-            width:230px;
+            width: 230px;
             height: 320px;
             transition-duration: 2s;
             border-radius: 20px;
-            margin-top: 50px;
-
-
-
-
+            box-sizing: border-box;
+            flex: 1 1 calc(20% - 25px);
         }
+
+        .shgcard:hover {
+            transition-duration: 1s;
+            box-shadow: rgba(245, 20, 20, 0.425) 0px 50px 100px -20px, rgba(255, 255, 255, 0.671) 0px 30px 60px -30px, rgba(214, 214, 214, 0.54) 0px -2px 6px 0px inset;
+        }
+
+
 
         .shgcard:hover {
             transition-duration: 1s;
@@ -45,8 +46,6 @@
             width: 200px;
             height: 120px;
             border-radius: 20px 20px 0px 0px;
-            /* position: relative; */
-            /* z-index: 0; */
             box-shadow: 0px 25px 35px black;
             margin-bottom: -50px;
 
@@ -62,16 +61,7 @@
             margin-right: 2px;
             }
 
-        /* .content-capsules span {
-            padding: 7px 15px;
-            margin-right: 5px;
-            font-family: 'K2D';
-            background-color: rgba(185, 185, 185, 0.418);
-            color: rgb(134, 134, 134);
-            border-radius: 16px;
 
-
-        } */
 
         .shgcontent-capsules span:hover {
             color: black;
@@ -102,11 +92,11 @@
             font-family: 'K2D';
             color: rgb(255, 255, 255);
             top: 0px;
-            /* left: 12px; */
             position: relative;
             background-color: rgba(0, 0, 0, 0.566);
             border-radius: 10px;
             padding: 2px;
+
         }
 
         .shgcontent-body p {
@@ -140,28 +130,12 @@
             box-shadow: 0px 8px 10px black;
         }
 
-        .shbutton button:hover {
-            background-color: grey;
-            transition: 0.5s;
-        }
 
-        .search-results-container {
+        .shgcard-img {
             background-color: black;
-            /* margin-left: -50%; */
-            margin-top: 10%;
-            /* margin-left: 200px; */
-            display: flex;
-            flex-wrap: wrap;
-
+            width: 200px;
+            height: 120px;
+            border-radius: 20px 20px 0px 0px;
+            box-shadow: 0px 25px 35px black;
+            margin-bottom: -50px;
         }
-
-        .search-div {
-            margin-left: -150px;
-            margin-top: 150px;
-            color: black;
-            background-color: black;
-        }
-
-        /* html {
-            background-color: black;
-        } */
