--- a/ghi/src/components/Cards/boardGameCard.css
+++ b/ghi/src/components/Cards/boardGameCard.css
@@ -72,6 +72,9 @@
   top: 0px;
   left: 12px;
   position: relative;
+  background-color: rgba(0, 0, 0, 0.667);
+  border-radius: 15px;
+  padding-left: 5px;
 }
 
 .board-game-content-body p {
