--- a/ghi/src/components/Cards/wishlistCard.css
+++ b/ghi/src/components/Cards/wishlistCard.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
+.icon2 {
+  color: transparent;
+}
+
 .wcontent-capsules {
   margin-bottom: -30px;
   z-index: 1;
   position: relative;
-  right: -250px;
+  right: -210px;
   /* top: 15px; */
   margin-right: 10px;
   gap: 1px;
