--- a/ghi/src/components/Home/Landing.css
+++ b/ghi/src/components/Home/Landing.css
@@ -6,6 +6,7 @@
   color: white;
   text-align: left;
   margin-left: 300px;
+  font-size: 40px;
 }
 .hero-carousel-container {
   background-color: #1a1a1a;
