--- a/ghi/src/components/Home/Menu.css
+++ b/ghi/src/components/Home/Menu.css
@@ -22,12 +22,14 @@
 .side-menu ul {
   list-style: none;
   padding: 0;
+  font-family: K2D;
 }
 
 .side-menu p {
   font-size: 17px;
   font-weight: bold;
   margin-bottom: 10px;
+  color: blueviolet
 }
 
 .side-menu li {
@@ -37,6 +39,7 @@
   transition: background-color 0.3s ease;
   font-size: 14px;
   color: white;
+  font-family: K2D;
 }
 
 .linkside {
@@ -46,6 +49,7 @@
   transition: background-color 0.3s ease;
   font-size: 14px;
   color: white;
+  font-family: K2D;
 
 }
 
