--- a/ghi/src/components/GameDetails/gameDetails.css
+++ b/ghi/src/components/GameDetails/gameDetails.css
@@ -16,6 +16,7 @@
 
     font-family: "K2D";
     position: relative;
+    /* margin-bottom: -30px; */
 
 
 }
@@ -25,7 +26,7 @@
     margin-top: 0px;
     text-align: right;
 
-    margin-right: 50px;
+    margin-right: 120px;
     margin-top: -35px;
     font-family: "K2D";
     position: relative;
@@ -171,8 +172,7 @@
   align-items: right;
   position: relative;
   margin-right: 5px;
-  margin-left: 1050px;
-
+  margin-left: 275px;
 }
 
 .moveright {
