--- a/ghi/src/components/Cards/boardCard.css
+++ b/ghi/src/components/Cards/boardCard.css
@@ -39,7 +39,7 @@
     border-radius: 20px;
     box-shadow: 0px 10px 20px black;
     display: inline-flex;
-    width: 30%; /* Adjust the width as needed */
+    width: 30%;
     margin-right: 20px;
     margin-top: 50px;
 
@@ -68,23 +68,12 @@
     border-radius: 7px 7px 7px 7px;
   }
 
-/*   .card1 { */
-/*     background: #222; */
-/*     border: 1px solid #dd2476; */
-/*     color: rgba(250, 250, 250, 0.8); */
-/*     width: 100%;
-    display: inline-flex; */
-
-/*   } */
 
   .flex-container {
     margin: 7px;
     display: inline-flex;
-    /* border: 1px solid black; */
     color: rgba(250, 250, 250, 0.8);
-    /* border-radius: 25px; */
-    /* box-shadow: 0px 10px 10px black; */
-}
+  }
 
 .card-img-top {
   box-shadow: 0px 20px 20px black;
