--- a/ghi/src/components/Home/Menu.css
+++ b/ghi/src/components/Home/Menu.css
@@ -8,14 +8,13 @@
   padding: 7px;
   width: 190px;
   z-index: 1;
-  overflow-y: auto; /* Enable vertical scrolling if needed */
-  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); Add a subtle box shadow */
+  overflow-y: auto;
   transition: width 0.5s ease-in-out;
   border-right: #bbb 2px;
 
   @media (max-width: 68px) {
-    width: 100%; /* Adjust width for smaller screens */
-    padding: 10px; /* Adjust padding for smaller screens */
+    width: 100%;
+    padding: 10px;
   }
 }
 
@@ -95,33 +94,3 @@ hr.dotted {
 .small-space {
             margin-bottom: 10px;
         }
-
-
-
-
-  /* .heroimg { */
-      /* width: 25%; */
-      /* margin-left: 18rem;
-      top: 300px; */
-      /* margin-top: 300px; */
-
-      /* z-index: 4; */
-  /* Floating is being called and activated on line 67 */
-      /* animation-name: floating;
-      animation-duration: 3s;
-      animation-iteration-count: infinite;
-      animation-timing-function: ease-in-out; */
-
-
-    /* } */
-      /* @keyframes floating { */
-        /* 0% {
-          transform: translate(0, 0px);
-        }
-        50% {
-          transform: translate(0, 10px);
-        }
-        100% {
-          transform: translate(0, -0px);
-        }
-      } */
