--- a/ghi/src/components/Home/Nav.css
+++ b/ghi/src/components/Home/Nav.css
@@ -6,7 +6,7 @@
   top: 0;
   padding: 20px;
   width: 100%;
-  height: 103px; /* Adjust the height as needed */
+  height: 103px; 
   z-index: 1;
   background-color: #000000;
   transition: background-color 0.5s ease-in-out;
@@ -45,16 +45,14 @@
   top: 20px;
   padding-bottom: 5px;
   object-fit: contain;
-  z-index: 3; /* Ensure this is higher than the z-index of .nav__dropdown */
+  z-index: 3;
 }
-
-/* Search bar */
 
 .ncontainer {
   cursor: pointer;
   position: fixed;
   right: 100px;
-  width: 500px; /* Set the desired expanded width */
+  width: 500px;
   height: 40px;
   top: 20px;
   padding-bottom: 5px;
@@ -63,8 +61,8 @@
 
 input[type=text] {
   position: relative;
-  padding: 15px 20px; /* Adjust padding as needed */
-  width: 100%; /* Set to 100% to fill the container */
+  padding: 15px 20px;
+  width: 100%;
   height: 40px;
   color: #525252;
 
@@ -78,7 +76,7 @@ input[type=text] {
 }
 
 
-/* Navigation DROP DOWN */
+
 .nav__avatar-container {
   position: absolute;
   right: 20px;
@@ -89,7 +87,7 @@ input[type=text] {
 .nav__dropdown {
   position: absolute;
   top: calc(100% - 0px);
-  right: -5px; /* Adjust this value as needed */
+  right: -5px;
   background-color: rgb(0, 0, 0);
   border: 3px solid #3e3e3e;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
