Cleaned up code sample and added UI screenshots to README.md

--- a/ghi/src/components/Cards/boardGameCard.css
+++ b/ghi/src/components/Cards/boardGameCard.css
@@ -47,7 +47,7 @@
 }
 
 .board-game-content-capsules span:hover {
-  color: black;
+  color: white;
   border: px solid gray;
   box-shadow: rgba(28, 28, 28, 0.3) 0px 5px 10px, rgba(59, 59, 59, 0.22) 0px 6px 3px;
   transition-duration: 0.7s;
