--- a/ghi/src/components/GameDetails/gameDetails.css
+++ b/ghi/src/components/GameDetails/gameDetails.css
@@ -284,3 +284,17 @@ label[for='rating'] {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 20px;
 }
+
+#big-screenshots {
+  text-align: right;
+  background-color: rgba(29, 29, 30, 0.816);
+  opacity: 0;
+  z-index: -1;
+  position: fixed;
+  left: 300px;
+  width: 75%;
+  height: max-content;
+  top: 150px;
+  border-radius: 20px;
+  padding: 15px;
+}
