--- a/ghi/src/components/GameDetails/gameDetails.css
+++ b/ghi/src/components/GameDetails/gameDetails.css
@@ -292,8 +292,8 @@ label[for='rating'] {
   opacity: 0;
   z-index: -1;
   position: fixed;
-  left: 300px;
-  width: 75%;
+  left: 400px;
+  width: 60%;
   height: max-content;
   top: 150px;
   border-radius: 20px;
@@ -302,4 +302,8 @@ label[for='rating'] {
 
 .screenshotsHero:hover {
   cursor: pointer;
+}
+
+.d-block {
+  height: min-content;
 }
